--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <td><img src="donkey.jpg" width="200" height="200" alt="steve image"></td>
       <td>
         <h1>Steve Poehler</h1>
-        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The APP Brewery.</a></strong></em></p>
+        <p><em>Follwer of <strong><a href="https://www.appbrewery.co/">The APP Brewery.</a></strong></em></p>
         <p>I am a software developer for the second largest baking company in the USA.</p>
       </td>
     </tr>
